# fsd

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
cad/: README.md  camera_mount.py  jetson_mount.py  nucleo_mount.py
docs/: CHANGELOG.md  README.md  ci.md  data-collection.md  deployment.md  firmware.md  hardware-setup-checklist.md  hardware.md  jetson.md  ml-paths.md  resume-after-parts.md  setup.md  slam.md  troubleshooting.md
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/src/: main.rs
hardware-3d/: README.md  assembly.scad  build.ps1  build.sh  camera_mast.scad  cover_shell.scad  jetson_tray.scad  params.scad  stm32_clip.scad  top_deck.scad
jetson/: Cargo.toml
jetson/src/: camera.rs  control.rs  inference.rs  input.rs  logger.rs  main.rs  serial.rs  slam.rs
ml/: Cargo.toml
ml-py/: README.md  bench.py  calibrate.py  compare_archs.py  compute_stats.py  dataset.py  drive_sim.py  export_onnx.py  models.py  notebook_demo.py  pilotnet.py  plot_distribution.py  replay.py  requirements.txt  smoke.py  stereo_demo.py  synthetic.py  train.py
ml-py/tests/: conftest.py  test_dataset.py  test_drive_sim.py  test_models.py  test_synthetic.py
ml/src/: data.rs  infer.rs  lib.rs  model.rs  train.rs
protocol/: Cargo.toml
protocol/src/: control.rs  lib.rs  pwm.rs
scripts/: README.md  deploy.sh  fsd-jetson.service  install_systemd.sh  quickstart.ps1  quickstart.sh
