[package]
name = "fsd-firmware"
version = "0.1.0"
edition = "2021"
authors = ["fsd team"]
description = "STM32 NUCLEO-H753ZI firmware (Embassy)."

[[bin]]
name = "fsd-firmware"
test = false
bench = false

[dependencies]
fsd-protocol = { path = "../protocol", default-features = false }

# embassy 생태계는 호환 버전을 같이 핀 (2026 초 기준 stable). 버전을 바꿀 땐 ecosystem
# 전체를 같이 옮겨야 native-links 충돌(embassy-time-queue)이 안 난다.
embassy-stm32    = { version = "0.6", features = ["defmt", "stm32h753zi", "memory-x", "time-driver-tim2", "exti", "unstable-pac"] }
embassy-executor = { version = "0.10", features = ["defmt", "platform-cortex-m", "executor-thread", "executor-interrupt", "embassy-time-driver"] }
embassy-time     = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000_000"] }
embassy-sync     = { version = "0.7" }
embassy-futures  = { version = "0.1" }

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

heapless = "0.8"
static_cell = "2.1"
# embassy-stm32 0.6 가 embedded-io-async 0.7 을 쓰므로 같은 버전으로 핀.
embedded-io-async = "0.7"
embedded-hal = "1.0"
embedded-hal-async = "1.0"

[profile.dev]
opt-level = 1
debug = true
lto = false

[profile.release]
opt-level = "z"
debug = 2          # defmt 디코딩에 필요
lto = "fat"
codegen-units = 1
overflow-checks = false
