[package]
name = "fsd-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Jetson <-> STM32 wire protocol (no_std compatible)."

[features]
default = ["std"]
std = ["serde/std", "postcard/use-std"]

[dependencies]
serde = { workspace = true }
postcard = { workspace = true }
heapless = { workspace = true }
crc = { workspace = true }

[lib]
name = "fsd_protocol"
